--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Создайте файл .env и добавьте следующие поля
 # Токен вашего бота
-TELEGRAM_TOKEN=6849287532:AAEvfhguLcKsctZlZ-ZCT04tnuljyefkJH4
+TELEGRAM_TOKEN=BOT_TOKEN
